<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AccSettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/colorAccent"/>
    <TextView
        android:id="@+id/display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profile_image"
        android:layout_marginTop="5dp"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/intrest_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iam Intrested in"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/display_name"
        android:layout_marginTop="6dp"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_intrest"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/intrest_txt"
        android:layout_marginTop="6dp"
        android:textColor="@color/white">
    </TextView>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/img_change_btn"
        android:text="@string/change_image"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/status_txt"
        android:layout_marginTop="100dp">
    </Button>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/status_change_btn"
        android:text="@string/change_my_intrest"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_change_btn"
        android:layout_marginTop="17dp">
    </Button>


</RelativeLayout>