<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/login_toolbar">

    </include>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_toolbar_txt"
        android:text="@string/login_to_your_account"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="32dp"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        >

    </TextView>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="179dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar_txt"
        android:layout_marginTop="45dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="278dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        android:layout_marginTop="45dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_create_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginRight="45dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        android:text="@string/login" />

</androidx.constraintlayout.widget.ConstraintLayout>